exercise2_03 2_04 2_06/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: app2-pong2-pod # This is the app as declared in the deployment.
  ports:
    - port: 3457
      protocol: TCP
      targetPort: 5050
