exercise2_03 2_04 2_06/manifests/service-pong2-counter.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: app2-pong2-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 6060
